--- a/fe/package.json
+++ b/fe/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@types/node": "^22.15.17"
   }
 }
